# pycrowdsec

./: README.md  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: pypi_publish.yml  unittests.yml
examples/django_example/: README.md  requirements.txt
examples/django_example/crowdsec_views/: apps.py  views.py
examples/django_example/crowdsec_views/templates/: captcha_page.html
examples/django_example/django_example/: settings.py  urls.py
examples/flask/: main.py  requirements.txt
examples/flask_example/: README.md  main.py  requirements.txt
examples/flask_example/templates/: captcha_page.html
src/pycrowdsec/: __init__.py  cache.py  client.py  flask.py  utils.py
src/pycrowdsec/django/: __init__.py
src/pycrowdsec/flask/: __init__.py
tests/: test_cache.py  test_mtls.py  test_redis_integration.py  test_stream_client.py  test_stream_decision_client.py
