[metadata]
name = pycrowdsec
version = 0.0.3
author = CrowdSec
author_email = core.tech@crowdsec.net
description = Python bouncer and clients for crowdsec
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crowdsecurity/pycrowdsec
project_urls =
    Bug Tracker = https://github.com/crowdsecurity/pycrowdsec/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests

[options.extras_require]
geo = geoip2

[options.packages.find]
where = src
