[metadata]
name = pycrowdsec
author = CrowdSec
author_email = core.tech@crowdsec.net
description = Python bouncer and clients for crowdsec
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crowdsecurity/pycrowdsec
project_urls =
    Bug Tracker = https://github.com/crowdsecurity/pycrowdsec/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata

[options.extras_require]
geo = geoip2

[options.packages.find]
where = src
